// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components / TaskListProgress All Pending 1`] = `
<div>
  <div
    className="w-full h-1 overflow-hidden bg-gray-200 rounded-full"
  >
    <div
      className="w-full h-full transition-transform duration-150 ease-out origin-left bg-teal-400"
      style={
        Object {
          "transform": "scaleX(0)",
        }
      }
    />
  </div>
  <p
    className="mt-2 font-sans leading-none uppercase text-small"
  >
    <span
      className="inline-block w-1/2"
    >
      0 of 4 completed, 4 remaining tasks.
    </span>
    <span
      className="inline-block w-1/2 text-right"
    >
      0% completed
    </span>
  </p>
</div>
`;

exports[`Storyshots Components / TaskListProgress Completed 1`] = `
<div>
  <div
    className="w-full h-1 overflow-hidden bg-gray-200 rounded-full"
  >
    <div
      className="w-full h-full transition-transform duration-150 ease-out origin-left bg-teal-400"
      style={
        Object {
          "transform": "scaleX(1)",
        }
      }
    />
  </div>
  <p
    className="mt-2 font-sans leading-none uppercase text-small"
  >
    <span
      className="inline-block w-1/2"
    >
      4 of 4 completed
    </span>
    <span
      className="inline-block w-1/2 text-right"
    >
      100% completed
    </span>
  </p>
</div>
`;

exports[`Storyshots Components / TaskListProgress Itermediate 1`] = `
<div>
  <div
    className="w-full h-1 overflow-hidden bg-gray-200 rounded-full"
  >
    <div
      className="w-full h-full transition-transform duration-150 ease-out origin-left bg-teal-400"
      style={
        Object {
          "transform": "scaleX(0.5)",
        }
      }
    />
  </div>
  <p
    className="mt-2 font-sans leading-none uppercase text-small"
  >
    <span
      className="inline-block w-1/2"
    >
      2 of 4 completed, 2 remaining tasks.
    </span>
    <span
      className="inline-block w-1/2 text-right"
    >
      50% completed
    </span>
  </p>
</div>
`;

exports[`Storyshots Components / TaskListProgress One Pending 1`] = `
<div>
  <div
    className="w-full h-1 overflow-hidden bg-gray-200 rounded-full"
  >
    <div
      className="w-full h-full transition-transform duration-150 ease-out origin-left bg-teal-400"
      style={
        Object {
          "transform": "scaleX(0.75)",
        }
      }
    />
  </div>
  <p
    className="mt-2 font-sans leading-none uppercase text-small"
  >
    <span
      className="inline-block w-1/2"
    >
      3 of 4 completed, 1 remaining task.
    </span>
    <span
      className="inline-block w-1/2 text-right"
    >
      75% completed
    </span>
  </p>
</div>
`;
